fix(FF-4652): fix item truncation

--- a/packages/card/src/components/FunctionBadge/styles.module.scss
+++ b/packages/card/src/components/FunctionBadge/styles.module.scss
@@ -46,3 +46,7 @@
 .wrapper {
   position: relative;
 }
+
+.item {
+  width: max-content;
+}
